[gd_scene load_steps=31 format=3 uid="uid://diy153cdvcjv6"]

[ext_resource type="Script" uid="uid://cjoftkfft0cl3" path="res://golem_boss.gd" id="1_bsmvf"]
[ext_resource type="Texture2D" uid="uid://x4eypjhgrmbf" path="res://art/Bosses/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" id="1_o8j3a"]
[ext_resource type="Texture2D" uid="uid://qmn7chbj20a7" path="res://art/Bosses/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" id="2_s54pl"]
[ext_resource type="FontFile" uid="uid://cfh33un0hvxfu" path="res://art/font/Daydream.ttf" id="3_cx2hw"]
[ext_resource type="Script" uid="uid://dpkfdo0371q8h" path="res://finite_state_machine.gd" id="4_t6gaq"]
[ext_resource type="Script" uid="uid://miemq1m7txsd" path="res://idle.gd" id="5_e7bep"]
[ext_resource type="Script" uid="uid://cw7qnw5o6q1ha" path="res://follow.gd" id="6_e7bep"]
[ext_resource type="Script" uid="uid://yjebxphggppy" path="res://melee_attack.gd" id="7_u8b2w"]
[ext_resource type="Script" uid="uid://brb1raxprfyqv" path="res://homing_missile.gd" id="8_p6t1k"]
[ext_resource type="Script" uid="uid://bn80upiv5iy08" path="res://art/Bosses/GolemBoss/laser_beam.gd" id="9_0garv"]
[ext_resource type="Script" uid="uid://clv2w45ghgon6" path="res://art/Bosses/GolemBoss/armor_buff.gd" id="10_iit6d"]
[ext_resource type="PackedScene" uid="uid://cdvw4ucm2j4qy" path="res://art/Bosses/GolemBoss/boss_bullet.tscn" id="10_sh10o"]
[ext_resource type="Script" uid="uid://m3nr5n2xskjt" path="res://art/Bosses/GolemBoss/dash.gd" id="11_8s186"]
[ext_resource type="Script" uid="uid://5dsgcm7c7m8a" path="res://death.gd" id="14_sh10o"]
[ext_resource type="AudioStream" uid="uid://b4hwlvp37i04y" path="res://ost/boss/boss_theme.mp3" id="15_r6rv5"]

[sub_resource type="Animation" id="Animation_mwilj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/Label:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8s186"]
resource_name = "armor_buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u8b2w"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bsmvf"]
resource_name = "boss_derrotado"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_iit6d"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_iq77x"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t6gaq"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cx2hw"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}

[sub_resource type="Animation" id="Animation_0garv"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_p6t1k"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e7bep"]
resource_name = "ranged_attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsmvf"]
_data = {
&"RESET": SubResource("Animation_mwilj"),
&"armor_buff": SubResource("Animation_8s186"),
&"block": SubResource("Animation_u8b2w"),
&"boss_derrotado": SubResource("Animation_bsmvf"),
&"death": SubResource("Animation_iit6d"),
&"glowing": SubResource("Animation_iq77x"),
&"idle": SubResource("Animation_t6gaq"),
&"laser": SubResource("Animation_cx2hw"),
&"laser_cast": SubResource("Animation_0garv"),
&"melee_attack": SubResource("Animation_p6t1k"),
&"ranged_attack": SubResource("Animation_e7bep")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cx2hw"]
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sh10o"]
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mwilj"]
radius = 100.0

[node name="GolemBoss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_bsmvf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 1)
texture = ExtResource("1_o8j3a")
hframes = 10
vframes = 10
frame = 50

[node name="pivot" type="Node2D" parent="."]
position = Vector2(100, 1)

[node name="Sprite2D" type="Sprite2D" parent="pivot"]
texture = ExtResource("2_s54pl")
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bsmvf")
}
autoplay = "idle"

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 0
offset_left = 21.0
offset_top = -17.0
offset_right = 261.0
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("3_cx2hw")
theme_override_font_sizes/font_size = 10
text = "Golem protector"

[node name="Label" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -200.5
offset_right = 336.0
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "JEFE DERROTADO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -51.0
offset_right = 27.0
offset_bottom = -28.0
text = "Debug"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2)
shape = SubResource("CapsuleShape2D_cx2hw")

[node name="boss_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_hitbox"]
shape = SubResource("CapsuleShape2D_sh10o")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_mwilj")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("4_t6gaq")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_e7bep")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_e7bep")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_u8b2w")

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_p6t1k")
bullet_node = ExtResource("10_sh10o")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_0garv")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_iit6d")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_8s186")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("14_sh10o")

[node name="BoostOst" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_r6rv5")

[connection signal="area_entered" from="boss_hitbox" to="." method="_on_boss_hitbox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
